[package]
name = "pinar"
version = "0.1.0"
authors = ["Sebastien Chapuis <sebastien@chapu.is>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[features]
default = ["pinar-serde"]

pinar-serde = ["serde", "serde_derive", "pinar-derive"]

[dependencies]
napi-sys = { path = "../napi-sys" }
failure = "0.1.3"
serde = { version = "1.*", optional = true}
serde_derive = { version = "1.*", optional = true}
pinar-derive = { path = "../pinar-derive", optional = true }
