[package]
name = "pinar"
version = "0.1.0"
authors = ["Sebastien Chapuis <sebastien@chapu.is>"]
edition = "2018"
description = "Library to write node native modules with N-API"
license = "MIT"
homepage = "https://pinar.rs"
repository = "https://github.com/sebastiencs/pinar"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[features]
default = ["pinar-serde"]

nightly = []
pinar-serde = ["serde", "serde_derive", "pinar-derive"]

[dependencies]
napi-sys = { version = "0.1", package = "pinar-napi-sys" }
failure = "0.1.3"

serde = { version = "1.*", optional = true }
serde_derive = { version = "1.*", optional = true }
pinar-derive = { version = "0.1", optional = true }
linkme = "0.1"
